--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>employee-management</name>
+	<name>employee-management-assignment</name>
 	<comment></comment>
 	<projects>
 	</projects>
